--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Get your News!</title>
-    <style>
-      body { background-color: #F2F6D0 }
+    <title>Cowboys News!</title>
+    <!-- <style>
+      body { background-color: rgb(83, 91, 172) }
       #wrapper {
         width: 960px;
         margin-left: auto;
@@ -24,7 +24,7 @@
       textarea, input {
         display: block;
         width: 100%;
-        background-color: #FCF5C7;
+        background-color:lightgray;
       }
       input {
         height: 36px;
@@ -34,16 +34,38 @@
         height: 200px;
         font-size: 18px;
       }
-    </style>
+    </style> -->
   </head>
   <body>
+    <nav class="navbar-expand-lg navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">B/R News</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/scrape" id="scrape">Scrape Articles</a>
+            <a class="nav-item nav-link" href="/saved">Saved Articles</a>
+            </div>
+        </div>
+    </nav>
     <div id="wrapper">
-      <h1>Note Scraper</h1>
+      <h1 class="headerInfo">Your Latest Sports News</h1>
+      <div class="jumbotron text-center" id="articles"></div>
+      <div class="text-center" id="notes"></div>
+    </div>
+    <!-- <div id="wrapper">
+      <h1>Cowboys News</h1>
       <h2><i>YOur YOur TExt TExt Here Here</i></h2>
       <div id="articles"></div>
       <div id="notes"></div>
-    </div>
+    </div> -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="app.js"></script>
   </body>
 </html>
